# toolcap

./: .prototools  Cargo.toml  LICENSE-APACHE  README.md
crates/toolcap-proxy/: Cargo.toml
crates/toolcap-proxy/src/: main.rs
docs/: brainstorm.md
docs/mvp/: plan.md  rfc.md
examples/: toolcap_proxy.rs
scripts/: run-toolcap-agent.sh
src/: acp.rs  lib.rs  matcher.rs  matchers.rs  operation.rs  outcome.rs  rule.rs  ruleset.rs  shell.rs
