[package]
name = "toolcap"
version = "0.1.0"
edition = "2024"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "A library for specifying tool use permissions in agentic applications."
readme = "README.md"
repository = "https://github.com/dherman/toolcap"
license = "MIT/Apache-2.0"

[features]
default = []
acp = ["dep:sacp", "dep:serde_json"]

[dependencies]
sacp = { version = "9.0", optional = true }
serde_json = { version = "1.0", optional = true }
