[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dave Herman <david.herman@gmail.com>"]
repository = "https://github.com/dherman/toolcap"
license = "MIT/Apache-2.0"

[package]
name = "toolcap"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library for specifying tool use permissions in agentic applications."
readme = "README.md"
repository.workspace = true
license.workspace = true

[features]
default = []
acp = ["dep:sacp", "dep:serde_json"]
matchers = []

[dependencies]
conch-parser = "0.1"
sacp = { version = "9.0", optional = true }
serde_json = { version = "1.0", optional = true }
