[package]
name = "toolcap"
version = "0.1.0"
edition = "2024"
authors = ["Dave Herman <david.herman@gmail.com>"]
description = "A library for specifying tool use permissions in agentic applications."
readme = "README.md"
repository = "https://github.com/dherman/toolcap"
license = "MIT/Apache-2.0"

[features]
default = []
acp = ["dep:sacp", "dep:serde_json"]
matchers = []

[dependencies]
conch-parser = "0.1"
sacp = { version = "9.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "toolcap_proxy"
required-features = ["acp", "matchers"]
