[package]
name = "toolcap-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "ACP proxy for Toolcap permission evaluation"
repository.workspace = true
license.workspace = true

[[bin]]
name = "toolcap-proxy"
path = "src/main.rs"

[dependencies]
toolcap = { path = "../..", features = ["acp", "matchers"] }
sacp = "9.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
